part3-plus-js-nodeRun-sample

--- a/part3-a-objects.html
+++ b/part3-a-objects.html
@@ -8,6 +8,19 @@
     <title>Teil 03 - Objekte</title>
     <script>
 
+let recipe = {
+    'title': 'Mole',
+    'servings': 2,
+    'ingredients': ['cumin', 'cinnamon', 'cocoa']
+};
+// Exercise 1 of 2:  
+console.log(recipe.title);
+console.log('Servings: ' + recipe.servings);
+console.log('Ingredients:');
+for (let i = 0; i < recipe.ingredients.length; i++) {
+    console.log(recipe.ingredients[i]);
+}
+// Exercise 2 of 2: 
 
 
     </script>
