--- a/part3-b-arguments.html
+++ b/part3-b-arguments.html
@@ -8,7 +8,17 @@
     <title>Teil 03 - Argumente</title>
     <script>
 
+const favMovie = {
+    title: "Puff the Magic Dragon",
+    duration: 30,
+    stars: ["Puff", "Jackie", "Living Sneezes"]
+}
 
+function printMovie(movie) {
+    console.log(movie.title + " lasts for " + movie.duration + " minutes. Stars: " + movie.stars.join(", ") + ".");
+}
+
+printMovie(favMovie);
 
     </script>
 </head>
