--- a/part3-d-advanced.html
+++ b/part3-d-advanced.html
@@ -5,10 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teil 03 - Parameter</title>
+    <title>Teil 03 - Advanced</title>
     <script>
 
+function validateCard(creditCardNum){
 
+// === 16 digits length:
+if(creditCardNum.length !== 16){
+  return false;
+}
+
+// only be numbers:
+for(let i = 0; i < creditCardNum.length; i++){
+  // store the current digit
+  let currentNumber = creditCardNum[i];
+
+  // turn the digit from STRING to INTEGER                !! according given solution
+  currentNumber = Number.parseInt(currentNumber);
+
+  // check that the digit is a number
+  if(!Number.isInteger(currentNumber)){
+    return false;
+  }
+}
+
+// The credit card number must be composed of at least two different digits 
+let obj = {};
+for(let i = 0; i < creditCardNum.length; i++){
+  obj[creditCardNum[i]] = true;
+}
+if(Object.keys(obj).length < 2){
+  return false;
+}
+
+// The final digit of the credit card number must be even
+if(creditCardNum[creditCardNum.length - 1] % 2 !== 0){
+  return false;
+}
+
+// The sum of all the digits must be greater than 16
+let sum = 0;
+for(let i = 0; i < creditCardNum.length; i++){
+  sum += Number(creditCardNum[i]);
+}
+if(sum <= 16){
+  return false;
+}
+
+return true;
+};
+
+// Samples:
+console.log(validateCard('a333333333111112')); // no letters allowed
+console.log(validateCard('8888888888888888')); // only 1 type of number
+console.log(validateCard('123451234512345')); // one digit missing
+console.log(validateCard('6666666666666663')); // last digit uneven
+console.log(validateCard('6211111111111112')); // true
 
     </script>
 </head>
